# gpt-image-2-skill

./: .dockerignore  .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  dist-workspace.toml  justfile
.claude-plugin/: plugin.json
.github/workflows/: ghcr-publish.yml  npm-publish.yml  post-release-verify.yml  release-candidate.yml  release.yml  tauri-app-release.yml
apps/gpt-image-2-app/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/gpt-image-2-app/scripts/: prepare-sidecar.mjs
apps/gpt-image-2-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/gpt-image-2-core/: Cargo.toml
crates/gpt-image-2-runtime/: Cargo.toml
crates/gpt-image-2-runtime/src/: batch_payloads.rs  command.rs  edit_runner.rs  generate_runner.rs  job_paths.rs  job_records.rs  lib.rs  provider_capabilities.rs  queue_events.rs  queue_executor.rs  queue_jobs.rs  queue_types.rs  queue_workers.rs  streaming.rs
crates/gpt-image-2-skill/: Cargo.toml
crates/gpt-image-2-web/: Cargo.toml
docs/: docker-web.md  runtime-merge-plan.md  rust-release-distribution-design.md  task-recovery-acceptance.md  task-recovery-design.md  tauri-release.md
scripts/: local_cutoff_provider.py  smoke_skill_install.cjs  sync_skill_bundle.cjs
scripts/npm/: build-matrix.mjs
scripts/release/: common.sh  configure-npm-trust.sh  patch-release-workflow.mjs  prepare.sh  publish.sh  smoke-archive.sh  sync-version-manifests.mjs  verify.sh  wait-for-release.sh
skills/gpt-image-2-skill/: SKILL.md
(+292 files in other folders)
