[package]
name = "gpt-image-2-runtime"
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Shared job-queue execution runtime for the GPT Image 2 web and desktop surfaces."

[package.metadata.dist]
dist = false

[dependencies]
gpt-image-2-core = { path = "../gpt-image-2-core", version = "0.7.1" }
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
