[package]
name = "gpt-image-2-runtime"
version = "0.7.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Shared runtime helpers for GPT Image 2 web and Tauri queues."

[package.metadata.dist]
dist = false

[dependencies]
gpt-image-2-core = { path = "../gpt-image-2-core", version = "0.7.2" }
serde_json = "1.0.145"
